reset password ui

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -16,7 +16,11 @@
   "email": "Email",
   "hintEmail": "Enter your Email",
   "hintPassword": "Enter your password",
+  "hinNewPassword": "Enter your new password",
   "hintConfirmPassword": "Confirm your password",
+  "resetYourPassword": "Reset Your Password",
+  "forStr": "for",
+  "goBack": "Go Back",
   "login": "Login",
   "submit": "Submit",
   "signUp": "Sign up",
