api reset password

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -56,6 +56,7 @@
   "atLeastNumber": "At least 1 number",
   "atLeastSpecial": "At least 1 special character",
   "ok": "OK",
-  "createAccountSuccess": "Create Account Success"
+  "createAccountSuccess": "Create Account Success",
+  "passwordChanged": "Password changed! You can now sign in with your new password"
   
 }
