change icon to svg

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -67,8 +67,12 @@
   "settings": "Settings",
   "editor": "Editor",
   "chats": "Chats",
-  "home": "Home"
-
+  "home": "Home",
+  "warning": "Warning",
+  "passwordNotChange": "Your password has not been changed, do you really want to exit?",
+  "appereance": "Appereance",
+  "notification": "Notification",
+  "appLanguage": "App Language"
 
   
 }
