--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -2,5 +2,74 @@
   "helloWorld": "Hello World!",
   "@helloWorld": {
     "description": "The conventional newborn programmer greeting"
-  }
+  },
+  "appName": "Todyapp",
+  "onboarding1Title": "Manage your tasks",
+  "onboarding1Content": "You can easily manage all of your daily tasks in DoMe for free",
+  "onboarding2Title": "Create daily routine",
+  "onboarding2Content": "In Uptodo  you can create your personalized routine to stay productive",
+  "onboarding3Title": "Orgonaize your tasks",
+  "onboarding3Content": "You can organize your daily tasks by adding your tasks into separate categories",
+  "continueStr": "Continue",
+  "skip": "Skip",
+  "getStarted": "Get Started",
+  "email": "Email",
+  "hintEmail": "Enter your Email",
+  "hintPassword": "Enter your password",
+  "hinNewPassword": "Enter your new password",
+  "hintConfirmPassword": "Confirm your password",
+  "resetYourPassword": "Reset Your Password",
+  "forStr": "for",
+  "goBack": "Go Back",
+  "login": "Login",
+  "submit": "Submit",
+  "signUp": "Sign up",
+  "signIn": "Sign in",
+  "forgotPassword": "Forgot pasword",
+  "welcomeBack": "Welcome back\nSign to your account",
+  "username": "Username",
+  "password": "Password",
+  "facebook": "Facebook",
+  "google": "Google",
+  "or": "--------or continue with--------",
+  "dontHaveAccount": "Don’t have an account? ",
+  "alreadyHaveAnAccount": "Already have an account? ",
+  "next": "Next",
+  "enterEmailRegister": "Enter your registered email below",
+  "rememberPassword": "Remember the password? ",
+  "success": "Success",
+  "checkYourEmail": "Please check your email for create a new password",
+  "cantGetEmail": "Can't get email? ",
+  "reSubmit": "Resubmit",
+  "backToLogin": "Back to login",
+  "createAccount": "Create account!",
+  "registerToGetStarted": "Register to get started.",
+  "byRegistering": "By registering, you are agreeing with our ",
+  "and": "and",
+  "termsOfUse": "Terms of Use",
+  "privacyPolicy": "Privacy Policy",
+  "name": "Name",
+  "yourPasswordMustBe": "Your password must be:",
+  "min8characters": "Min 8 characters",
+  "optional": "Optional",
+  "lowerUpperCase": "Lower case & Upper case",
+  "atLeastNumber": "At least 1 number",
+  "atLeastSpecial": "At least 1 special character",
+  "ok": "OK",
+  "createAccountSuccess": "Create Account Success",
+  "passwordChanged": "Password changed! You can now sign in with your new password",
+  "noInternet": "No Internet connection",
+  "checkYourInternet": "Please check your internet connection",
+  "openSettings": "Open Settings",
+  "oops": "Oops!",
+  "wellDone": "Well done!",
+  "keepGoing": "Keep going",
+  "settings": "Settings",
+  "editor": "Editor",
+  "chats": "Chats",
+  "home": "Home",
+  "warning": "Warning",
+  "passwordNotChange": "Your password has not been changed, do you really want to exit?"
+
+  
 }
