chat and conversation UI

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -85,7 +85,9 @@
   "notice": "Notice",
   "logOutNotice": "Do you want to log out?",
   "camera": "Camera",
-  "gallery": "Gallery"
+  "gallery": "Gallery",
+  "cancel": "Cancel",
+  "search": "Search"
 
 
   
