handle show sticker

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -87,7 +87,8 @@
   "camera": "Camera",
   "gallery": "Gallery",
   "cancel": "Cancel",
-  "search": "Search"
+  "search": "Search",
+  "typeSomething": "Type Something ..."
 
 
   
