toggle show detail message

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -88,7 +88,8 @@
   "gallery": "Gallery",
   "cancel": "Cancel",
   "search": "Search",
-  "typeSomething": "Type Something ..."
+  "typeSomething": "Type Something ...",
+  "you": "You"
 
 
   
